
*Ver3.04 : 2016/xx/xx

-sumomoテーマを微修正。
-cuteテーマを微修正。
-【記法】数式入力を簡単にするTeXモードの実装
-【記法】麻雀記法の画像を別のものに変更しました。((麻雀記法を利用中の方は、ブログの再構築を実行してください。))
-【fix】adiary.conf.cgiの album_jpeg_quality の設定が有効にならない。（[http://adiary.blog.abk.nu/0387#c9:Thanks to 平山]）
-【fix】タグなし記事数に、非公開記事がカウントされてしまう。（[http://adiary.blog.abk.nu/0387#c4:Thanks to t-hide]）
-【fix】システムメニューを辿れないことがある。
-【fix】自動リンクを入力テキスト中で有効にしても、有効になっていなかった。
-【fix】【Markdown】記事が見出しで始まっているとき、空の{<section>}が出力されてしまう。
-【fix】【Markdown】GFM拡張のテーブル記法の判定条件が厳しすぎた。
-他

*Ver3.03 : 2016/02/19

-【fix】デザイン編集において、複数表示モードの動作が正しくなかった。

*Ver3.02 : 2016/01/28

-[http://adiary.org/devman/files/:adiaryのファイル構造の説明]を開発マニュアルに書きました。
-\displaystyleで数式を表示する{[mathd:]}タグを追加。
-slideshareに対するフィルター記法や埋め込み表紙を更新。
-[http://adiary.org/v3man/Satsuki/block:#pc-sp:pcのみ表示/スマホのみ表示]のCSS定義。
-テーマの配色変更で使うHSV変換式をまともなものに変更しました。((HSV各値が「255」に収まる変換式は使い勝手は良いのですが、色の変更に使うと色相(H)を変更しているのに、SやVも微妙に変化してしまい配色がアンバランスになっていました。今回、HSV定義式に則ったものに変更してあります。))
-テーマの配色変更でのHSVの動作を軽くしました。
-highlight.jsをアップデートしました。[https://github.com/nabe-abk/adiary/blob/master/js/highlight.txt:対応言語]を増やしました。（[http://www.ujiya.net/0268:#k268p2:Thanks to ぉゅぅ]）
-フォーム値の長さ制限がかかった場合に警告を出すようにしました。（[http://ac206223.ppp.asahi-net.or.jp/adiary/diary/hirosugu/024:#k24p1.2:Thanks to 平山]）
-それに伴い、フォーム値のデフォルトの制限値を変更しました。((追従する場合は、adiary.conf.cgi.sample の If_post_exec_pre の設定を参考にしてください。))
-adiary.js中のIE67フラグを除去しました。
-スマホメニューを設定し忘れる人が多いので、未設定時に警告を出すようにしました。
-スマホメニューの設定の有無に関わらず、スマホ表示でメニュー領域を出力するようにしました。((テーマの開発（スマホ用）が煩雑になるのを防ぐためです。))
-IEのスタイルシート（CSS）によるXSSが、IE8やIE9の標準準拠モードでは発生しないのでCSSのXSS(expression)対策コードを削除しました。（[http://adiary.blog.abk.nu/0385:#c3:Thanks to t-hide]）
-ユーザーCSSから dynamic.css を生成するとき、コメントを除去するようにしました。
-【デザイン】タイトル文字のセンタリング設定を作りました。
-【デザイン】ヘッダの背景の固定/スクロール設定を追加しました。
-【デザイン】ヘッダや表示領域の背景に透過度設定を追加しました。
-【security-fix】第３者にレンタルしている場合、admin_trsut_modeが有効なとき、管理者がブログの再構築を行うと、trsut_modeで記事が再構築されてしまう。問題に対処するため、blogidと同じユーザーidを参照し、そのidが存在し管理者でない場合は、再構築時にtrsut_modeをoffにするよう仕様変更しました。((すでにそのような状況の場合は、システム管理→アップデートから全ブログを再構築してください。))