@@ -108,9 +108,9 @@
 # セッション保持時間（秒） 180 days
 #<$Auth.expires = 180day>
 
-# 多重ログインを許可する
-#<$Auth.multisession = 1>
-# 多重ログイン時、１つログアウトするとすべてログアウトする
+# 1ユーザーあたりの多重ログイン許可数
+#<$Auth.max_sessions = 1>
+# 多重ログイン時、すべてログアウトする（標準はoff）
 #<$Auth.all_logout = 1>
 
 # ログイン失敗時にスリープする
