@@ -23,15 +23,15 @@ $self->{disallow_num_pass}=1;		数字のみのパスワードを拒否する
 $self->{pass_min}        = 4;		パスワードの最低文字数（デフォルト4文字）
 $self->{expires}	 = 180*86400;	ログインの有効期限（秒）
 
-$self->{sessions}    = 1;	１ユーザーあたりの最大ログインセッション数
-$self->{all_logout}  = 0;	ログアウト時にすべてのセッションを削除
-$self->{start_up}    = 0;	管理者未登録時に root* 無条件認証する
+$self->{max_sessions} = 1;	１ユーザーあたりの最大ログインセッション数
+$self->{all_logout}   = 0;	ログアウト時にすべてのセッションを削除
+$self->{start_up}     = 0;	管理者未登録時に root* 無条件認証する
 
-$self->{fail_sleep}  = 0;	ログイン失敗時にsleep（秒）。0:無効。±0.2される
-$self->{fail_count}  = 15;	指定回数失敗したら、しばらくログインできなくする
-$self->{fail_minute} = 10;	しばらくログインできなくなる時間（分）
+$self->{fail_sleep}   = 0;	ログイン失敗時にsleep（秒）。0:無効。±0.2される
+$self->{fail_count}   = 15;	指定回数失敗したら、しばらくログインできなくする
+$self->{fail_minute}  = 10;	しばらくログインできなくなる時間（分）
 
-$self->{logtext_max} = 128;	ログ１要素あたりの最大文字数
+$self->{logtext_max}  = 128;	ログ１要素あたりの最大文字数
 
 ================================================================================
 ●カラム拡張
