@@ -10,6 +10,7 @@
 -【fix】タグなし記事数に、非公開記事がカウントされてしまう。（[http://adiary.blog.abk.nu/0387#c4:Thanks to t-hide]）
 -【fix】システムメニューを辿れないことがある。
 -【fix】自動リンクを入力テキスト中で有効にしても、有効になっていなかった。
+-【fix】Auth.multisession の設定が無効だった。((Auth.max_sessionsに設定項目が変更になっています。))
 -【fix】【Markdown】記事が見出しで始まっているとき、空の{<section>}が出力されてしまう。
 -【fix】【Markdown】GFM拡張のテーブル記法の判定条件が厳しすぎた。
 -他
